# LangMax

./: .gitignore  README.md  pyproject.toml
23q4/llama.cpp/: dow-model.sh  dow_model.sh  sta-inference.sh  sta-server.sh  sta_inference.sh  sta_server.sh  upd_inference.sh
23q4/llama_cpp/: sta_inference.sh  upd_inference.sh
23q4/llm-science/: llm-science-cut-fragment-length.ipynb
23q4/mlx/: sta-inference-lora.sh  sta-inference-mistral.sh  sta_inference_llama.sh  sta_inference_mistral.sh  sta_train_lora.sh
23q4/others/: 005_logprobs.py  006_inference_perplexity.py  007_dataset_exam.py  008.py  009.py  011_linear_regression.py  012_logistic_regression.py
24q1/others/: 004_claude_3.py  005_logprobs.py  007_claude_3_vision.py  010_openlogprobs.py  011_ragas_gen_ss_ts.py
assets/prompts/: custom_instructions.v2.md  gtd.v1.md  literature_critiquer.md  perplexity_system_prompt.md
prompts/: custom-instructions-misc-lite.txt  custom-instructions-misc.txt  custom_instructions.v1.md
scripts/23q4/llama.cpp/: sta-server.sh  upd.sh
scripts/23q4/llm-science/: llm-science-cut-fragment-length.ipynb
scripts/23q4/others/: 007_dataset_exam.py  008.py  013.py
scripts/23q4/t_llama_cpp/: sta-server.sh
scripts/23q4/t_llm_science/: llm-science-exam-eda.ipynb
scripts/24q1/call_api/: call_gpt.py  call_one_api.py  call_one_api_fix.py
scripts/24q1/others/: 001_logprobs.py  003_chatgpt_by_browser.py  004_claude_3.py  008_chainlit.py  009_chainlit_llava.py  012_openrouter.py
scripts/24q1/t-call-api/: call_one_api_demo.py  call_one_api_qkvlab.py
scripts/24q1/t-chainlit/: chainlit_llava.py
scripts/24q2/others/: 003_o200k_base.py  004_polars.py
scripts/24q2/t-marimo/: marimo_demo.py
scripts/24q3/misc/: 09_joblib.py
scripts/baml_src/: generators.baml
scripts/db_sdk/: libsql_sdk.py
scripts/llm_sdk/: anthropic_completion_bedrock.py  cerebras_completion.py  openai_function_calling.py  openai_function_calling_full.py  openai_response_format.py  openai_response_format_steaming.py
src/baml-sdk/baml_client/: async_client.py  inlinedbaml.py  partial_types.py  sync_client.py  types.py
src/llm-sdk/: gemini_search_grounding.py  gemini_thinking_completion.py  gemini_thinking_steaming.py  mlx_lm_completion.py  openrouter_completion.py
src/prompts/: custom-instructions-misc-lite.txt  custom-instructions-misc.txt
