[tool.poetry]
    authors     = ["Alex <30626291+ipruning@users.noreply.github.com>"]
    description = "Leveraging the capabilities of LLMs to improve day-to-day tasks."
    name        = "langmax"
    readme      = "README.md"
    version     = "0.1.0"

[tool.poetry.dependencies]
    anthropic        = "^0.25.0"
    autocorrect-py   = "^2.9.0"
    chainlit         = "^1.0.0"
    datasets         = "^2.19.0"
    einops           = "^0.7.0"
    flask            = "^3.0.0"
    gradio           = "^4.21.0"
    httpx            = { extras = ["socks"], version = "^0.27.0" }
    langchain        = "^0.1.0"
    lark-oapi        = "^1.2.0"
    litellm          = "^1.35.0"
    llama-cpp-python = { extras = ["server"], version = "^0.2.0" }
    llama-index      = "^0.10.0"
    lmql             = "^0.7.0"
    marimo           = "^0.4.0"
    matplotlib       = "^3.8.0"
    mlx              = "^0.11.0"
    numpy            = "^1.26.0"
    openai           = "^1.23.0"
    pandas           = "^2.2.0"
    parea-ai         = "^0.2.0"
    portkey-ai       = "^1.2.0"
    python           = ">=3.10.0, <3.13.0"
    python-dotenv    = "^1.0.1"
    ragas            = "^0.1.0"
    replicate        = "^0.25.0"
    rich             = "^13.7.0"
    sentencepiece    = "^0.2.0"
    tenacity         = "^8.2.0"
    tiktoken         = "^0.6.0"
    tqdm             = "^4.66.0"
    transformers     = { extras = ["torch"], version = "^4.40.0" }
    wandb            = "^0.16.0"

[tool.poetry.dev-dependencies]
    # Static Type Checker
    mypy = "^1.9.0"
    # Linter
    flake8      = "^7.0.0"
    mccabe      = "^0.7.0"
    pep8-naming = "^0.13.3"
    pylint      = "^3.1.0"
    pyflakes    = "^3.2.0"
    # Formatter
    black        = { extras = ["jupyter"], version = "^23.7.0" }
    blacken-docs = "^1.16.0"
    isort        = "^5.13.0"
    # Unit Testing
    coverage   = { version = "^7.4.0", extras = ["toml"] }
    pytest     = "^8.1.0"
    pytest-cov = "^5.0.0"
    # Automation
    commitizen = "^3.24.0"
    nox        = "^2024.4.15"
    nox-poetry = "^1.0.0"
    pre-commit = "^3.7.0"
    # Build
    # Debug
    loguru    = "^0.7.0"
    viztracer = "^0.16.0"

[tool.mypy]
    ignore_missing_imports = true
    strict                 = true

[tool.coverage.run]
    omit = [
        ".*",
        "*/site-packages/*",
        "*/__init__.py",
        "*/__main__.py",
        "*/tests",
        "*/excp.py",
    ]

[tool.coverage.report]
    fail_under   = 70
    show_missing = true

[tool.black]
    line_length = 120

[tool.isort]
    extend_skip_glob = [
        ".*",
        "*/site-packages/*",
        "*/__init__.py",
        "*/__main__.py",
        "*/tests",
        "*/excp.py",
    ]
    force_sort_within_sections = true
    line_length = 120
    profile = "black"

[tool.pytest.ini_options]
    python_files = ["test_*.py"]
    testpaths    = ["tests"]

[build-system]
    build-backend = "poetry.core.masonry.api"
    requires      = ["poetry>=1.0.0"]
