[project]
    name = "langmax"
    version = "0.1.0"
    description = "Leveraging the capabilities of LLMs to improve day-to-day tasks."
    authors = [
        { name = "Alex", email = "30626291+ipruning@users.noreply.github.com" },
    ]
    readme = "README.md"
    requires-python = ">=3.12, <3.13"
    dependencies = [
        "anthropic[bedrock]>=0.42.0",
        "autoevals>=0.0.111",
        "baml-py>=0.70.5",
        "braintrust>=0.0.177",
        "datasets>=3.2.0",
        "einops>=0.8.0",
        "grpcio>=1.68.1",
        "jinja2>=3.1.4",
        "joblib>=1.4.2",
        "logfire>=2.9.0",
        "marimo>=0.10.6",
        "mcp>=1.1.2",
        "mflux>=0.4.1",
        "openai>=1.58.1",
        "pandera>=0.21.1",
        "patito>=0.8.2",
        "polars[numpy, openpyxl, pandas, pydantic, pyarrow, sqlalchemy]>=1.17.1",
        "rich>=13.9.4",
        "ruff~=0.8.4",
        "timm>=1.0.12",
        "tokencost>=0.1.17",
        "torchvision>=0.20.1",
    ]

[tool.pyright]
    venv             = ".venv"
    venvPath         = "."
    typeCheckingMode = "standard"

    reportMissingImports = "information"

[tool.uv]
    managed = true
    package = true

[tool.ruff]
    exclude = [
        ".bzr",
        ".direnv",
        ".eggs",
        ".git",
        ".git-rewrite",
        ".hg",
        ".ipynb_checkpoints",
        ".mypy_cache",
        ".nox",
        ".pants.d",
        ".pyenv",
        ".pytest_cache",
        ".pytype",
        ".ruff_cache",
        ".svn",
        ".tox",
        ".venv",
        ".vscode",
        "__pypackages__",
        "_build",
        "buck-out",
        "build",
        "dist",
        "node_modules",
        "site-packages",
        "venv",
    ]
    indent-width = 4
    line-length = 120
    target-version = "py312"

[tool.ruff.lint]
    select    = ["A", "E", "F", "I", "N", "T100"]
    ignore    = ["E501", "N807"]
    fixable   = ["ALL"]
    unfixable = []

    dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
    quote-style                = "double"
    indent-style               = "space"
    skip-magic-trailing-comma  = false
    line-ending                = "auto"
    docstring-code-format      = true
    docstring-code-line-length = "dynamic"
