[project]
name = "langmax"
version = "0.1.0"
description = "Leveraging the capabilities of LLMs to improve day-to-day tasks."
authors = [
    { name = "Alex", email = "30626291+ipruning@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.4.2",
    "logfire>=3.0.0",
    "marimo>=0.10.9",
    "mcp>=1.2.0",
    "openai>=1.59.4",
    "patito>=0.8.3",
    "polars[numpy, openpyxl, pandas, pydantic, pyarrow, sqlalchemy]>=1.19.0",
    "rich>=13.9.4",
]

[tool.pyright]
venv = ".venv"
venvPath = "."
typeCheckingMode = "standard"

reportMissingImports = "information"
